--- a/src/styles/layout/_body.scss
+++ b/src/styles/layout/_body.scss
@@ -12,7 +12,7 @@
 .content {
   width: 60vw;
   text-align: center;
-  padding: 2vw;
+  padding: 4vh 2vw;
   align-self: center;
 
   @include extrasmall {
@@ -20,11 +20,5 @@
   }
   @include small {
     width: 90vw;
-  }
-}
-
-.customerLinks {
-  ul {
-    font-weight: 400;
   }
 }
